--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,19 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 3"
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\\n', ' ', '!', '\"', '&', \"'\", '(', ')', ',', '-', '.', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '?', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'Y', 'Z', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "75\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('wizard_of_oz.txt', 'r', encoding='utf-8') as f:\n",
+    "    text = f.read()\n",
+    "chars = sorted(set(text))\n",
+    "print(chars) \n",
+    "print(len(chars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenizer\n",
+    "string_to_int = {ch:i for i,ch in enumerate(chars)}\n",
+    "int_to_string = {i:ch for i,ch in enumerate(chars)}\n",
+    "encode = lambda s: [string_to_int[c] for c in s]\n",
+    "decode = lambda l: ''.join([int_to_string[i] for i in l])\n",
+    "\n",
+    "encoded_hello = encode('hello')\n",
+    "decoded_hello = decode(encoded_hello)\n",
+    "print(decoded_hello)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cuda-gpt",
+   "display_name": "cuda",
    "language": "python",
-   "name": "cuda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
